<resources>
    <string name="app_name">Music</string>
    //TextMainAct1
    <string name="buttonInit">HOME</string>
    //TextMainAct2
    <string name="TextTitleHome">INSTRUMENTOS</string>
    <string name="btnProduct1">INGRESAR</string>
    <string name="btnProduct2">INGRESAR</string>
    <string name="btnProduct3">INGRESAR</string>
    <string name="Product1">GUITARRAS</string>
    <string name="Product2">PIANOS</string>
    <string name="Product3">VIOLINES</string>
    //TextMainAct3
    <string name="btnProduct">Ver Instrumentos</string>
</resources>